@@ -881,21 +881,42 @@ static SEXP modLa_chol2inv(SEXP A, SEXP size)
 {
     int sz = asInteger(size);
     if (sz == NA_INTEGER || sz < 1)
-        error(_("'size' argument must be a positive integer"));
-    if (isMatrix(A))
     {
-        SEXP Amat = PROTECT(coerceVector(A, REALSXP));
-        SEXP ans;
-        SEXP adims = getAttrib(A, R_DimSymbol);
-        int m = INTEGER(adims)[0];
-        int n = INTEGER(adims)[1];
-        int i, j;
+        error(_("'size' argument must be a positive integer"));
+        return R_NilValue; /* -Wall */
+    }
+    else
+    {
+        SEXP ans, Amat = A; /* -Wall: we initialize here as for the 1x1 case */
+        int m = 1, n = 1, i, j, nprot = 0;
+
+        if (sz == 1 && !isMatrix(A) && isReal(A))
+        {
+            /* nothing to do; m = n = 1; ... */
+        }
+        else if (isMatrix(A))
+        {
+            SEXP adims = getAttrib(A, R_DimSymbol);
+            Amat = PROTECT(coerceVector(A, REALSXP));
+            nprot++;
+            m = INTEGER(adims)[0];
+            n = INTEGER(adims)[1];
+        }
+        else
+            error(_("'a' must be a numeric matrix"));
 
         if (sz > n)
+        {
+            UNPROTECT(nprot);
             error(_("'size' cannot exceed ncol(x) = %d"), n);
+        }
         if (sz > m)
+        {
+            UNPROTECT(nprot);
             error(_("'size' cannot exceed nrow(x) = %d"), m);
+        }
         ans = PROTECT(allocMatrix(REALSXP, sz, sz));
+        nprot++;
         for (j = 0; j < sz; j++)
         {
             for (i = 0; i <= j; i++)
@@ -904,6 +925,7 @@ static SEXP modLa_chol2inv(SEXP A, SEXP size)
         F77_CALL(dpotri)("Upper", &sz, REAL(ans), &sz, &i);
         if (i != 0)
         {
+            UNPROTECT(nprot);
             if (i > 0)
                 error(_("element (%d, %d) is zero, so the inverse cannot be computed"), i, i);
             error(_("argument %d of Lapack routine %s had invalid value"), -i, "dpotri");
@@ -913,12 +935,9 @@ static SEXP modLa_chol2inv(SEXP A, SEXP size)
             for (i = j + 1; i < sz; i++)
                 REAL(ans)[i + j * sz] = REAL(ans)[j + i * sz];
         }
-        unprotect(2);
+        UNPROTECT(nprot);
         return ans;
     }
-    else
-        error(_("'a' must be a numeric matrix"));
-    return R_NilValue; /* -Wall */
 }
 
 /* ------------------------------------------------------------ */
